# camera-trap-tk

./: .gitignore  CHANGELOG.md  README.md  build.ps1  config.ini.sample  datagrid.py  demo-tkdatagrid.py  pyproject.toml  requirements.txt  requirements_build.txt  requirements_lock.txt  start.ps1
docs/: FAQ.rst  import-example-species.csv  import-example.csv  import-folder-flow.dot  system-design.rst  test-case.rst  upload-status-flow.dot  usage.rst  work-flow.md  workflow.md  workflow.rst
src/: app.py  autocomplete_widget.py  config.py  credentials.py.sample  database.py  db.py  helpers.py  image.py  image_detail.py  main.py  server.py  source.py  upload.py  utils.py  version.py  worker.py
src/frame/: __init__.py  appbar.py  datatable.py  folder_list.py  footer.py  help_page.py  image_list.py  imageviewer.py  landing.py  main.py  panel.py  sidebar.py  statusbar.py  toolbar.py  upload_progress.py
src/page/: __init__.py  image_list.py  source_list.py
src/tkdatagrid/: README.md  __init__.py  data_grid.py  main_table.py  other_classes.py
src/toplevel/: __init__.py  configure_font.py  configure_keyboard_shortcut.py  deleted_images.py  help_page.py  image_detail.py  import_data.py  login_form.py  main_messagebox.py  video_player.py
tkdatagrid/: README.md  __init__.py  autocomplete_widget.py  data_grid.py  main_table.py  other_classes.py  utils.py
